# VirtualPedals

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  Run Virtual Pedals.bat  e -i --root
Source/: Main.cpp
Source/App/: MainComponent.cpp  MainComponent.h
Source/Effects/: AmpEffects.h  DelayEffects.h  DriveEffects.h  DynamicsEffects.h  EqEffects.h  FilterEffects.h  ModEffects.h  MoreEffects.h  PickupEffects.h  PitchEffects.h  ReverbEffects.h  SustainEffect.h  TextureEffects.h
Source/Engine/: AudioEngine.cpp  AudioEngine.h  DspUtil.h  NodeGraph.h  Params.h  Pedal.h  PedalChain.cpp  PedalChain.h  PedalFactory.cpp  PedalFactory.h
Source/Hosting/: PluginHost.cpp  PluginHost.h
Source/Midi/: MidiLearnManager.h
Source/Presets/: PresetManager.cpp  PresetManager.h
Source/ToneDna/: ToneDnaAnalyzer.cpp  ToneDnaAnalyzer.h
Source/Ui/: LookAndFeel.h  NodeEditor.cpp  NodeEditor.h  PedalComponent.cpp  PedalComponent.h  PedalboardView.cpp  PedalboardView.h  SidePanels.cpp  SidePanels.h  Visualizers.h
